Fix table sort by dates and modal overflow

--- a/frontend/src/components/modal/modal.module.css
+++ b/frontend/src/components/modal/modal.module.css
@@ -27,7 +27,7 @@
   width: 50%; /* Could be more or less, depending on screen size */
   min-height: 60vh;
   max-height: 80vh;
-  overflow: auto;
+  overflow: none;
   /* text-align: center; */
 }
 
